Feedback from Nick

--- a/content/themes/codinghouse/default.hbs
+++ b/content/themes/codinghouse/default.hbs
@@ -107,7 +107,7 @@
     <a id="nav-logo" class="pull-left" href="http://codinghouse.co"><img src="http://cdn.codinghouse.co/images/logo.png" height="80"></a>
     <div class="pull-right right-section">
       <ul class="list-inline hidden-xs">
-        <li><a href="/"><i class="fa fa-home"></i></a></li>
+        <li><a href="http://codinghouse.co/"><i class="fa fa-home"></i></a></li>
         <li><a href="https://twitter.com/codinghouse" target="_blank"><i class="fa fa-twitter"></i></a></li>
         <li><a href="https://www.facebook.com/codinghouse.co" target="_blank"><i class="fa fa-facebook"></i></a></li>
         <li><a href="https://www.linkedin.com/company/coding-house" target="_blank"><i class="fa fa-linkedin"></i></a></li>
@@ -132,30 +132,32 @@
             <ul id="upcoming-workshops" class="list-unstyled">
             </ul>
           </div>
-          <div class="banner banner-newsletter">
-            <div class="header">Sign Up for News and Updates</div>
-            <form action="//codinghouse.us10.list-manage.com/subscribe/post?u=ba673ed6200e919c9739ac345&amp;id=82a5d99195" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
-              <div id="mc_embed_signup_scroll">
-                <div class="form-group">
-                  <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email Address" required="">
-                  <div id="mce-responses" class="clear">
-                    <div class="response" id="mce-error-response" style="display:none"></div>
-                    <div class="response" id="mce-success-response" style="display:none"></div>
+          <div id="engage">
+            <div class="banner banner-newsletter">
+              <div class="header">Sign Up for News and Updates</div>
+              <form action="//codinghouse.us10.list-manage.com/subscribe/post?u=ba673ed6200e919c9739ac345&amp;id=82a5d99195" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+                <div id="mc_embed_signup_scroll">
+                  <div class="form-group">
+                    <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email Address" required="">
+                    <div id="mce-responses" class="clear">
+                      <div class="response" id="mce-error-response" style="display:none"></div>
+                      <div class="response" id="mce-success-response" style="display:none"></div>
+                    </div>
+                    <div style="position: absolute; left: -5000px;"><input type="text" name="b_ba673ed6200e919c9739ac345_82a5d99195" tabindex="-1" value=""></div>
                   </div>
-                  <div style="position: absolute; left: -5000px;"><input type="text" name="b_ba673ed6200e919c9739ac345_82a5d99195" tabindex="-1" value=""></div>
+                  <div class="form-group">
+                    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary">
+                  </div>
                 </div>
-                <div class="form-group">
-                  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary">
-                </div>
-              </div>
-            </form>
-          </div>
-          <div class="banner banner-codinghouse">
-            <a href="http://codinghouse.co" class="banner-link" target="_blank">
-              <h4>Brought To You By</h4>
-              <img src="http://cdn.codinghouse.co/images/logo-black.png" class="img-responsive">
-              <button class="btn btn-primary">Learn More</button>
-            </a>
+              </form>
+            </div>
+            <div id="codinghouse-banner" class="banner banner-codinghouse">
+              <a href="http://codinghouse.co" class="banner-link" target="_blank">
+                <h4>Brought To You By</h4>
+                <img src="http://cdn.codinghouse.co/images/logo-black.png" class="img-responsive">
+                <button class="btn btn-primary">Learn More</button>
+              </a>
+            </div>
           </div>
         </div>
       </div>
