--- a/content/themes/codinghouse/assets/css/codinghouse.css
+++ b/content/themes/codinghouse/assets/css/codinghouse.css
@@ -305,7 +305,7 @@ article h1 {
   border-radius: 2px;
   overflow: hidden;
   display: block;
-  margin-top: 20px;
+  margin-top: 1.5em;
 }
 
 .banner-recommended {
@@ -313,12 +313,6 @@ article h1 {
   background: #eee;
   text-align: center;
   padding: 30px;
-  margin-bottom: 20px;
-  margin-top: 20px;
-}
-
-.banner+.banner, .banner+.row {
-  margin-top: 40px;
 }
 
 .banner-recommended a.title {
@@ -342,11 +336,6 @@ article h1 {
 
 .banner-recommended i {
   color: orange;
-}
-
-.banner>:last-child:after {
-  margin-bottom: 0;
-  border: none !important;
 }
 
 .banner-codinghouse, .banner-codinghouse2 {
@@ -375,7 +364,6 @@ a.banner-link:hover {
   background: #eee;
   text-align: center;
   border: 1px solid #ccc;
-  margin-bottom: 20px;
 }
 
 .footer {
@@ -485,6 +473,14 @@ a.banner-link:hover {
 
   .top-nav-collapse {
     padding: 0;
+  }
+
+  .fixed-corner {
+    position: fixed;
+    top: 0;
+    right: 1.5em;
+    width: 27.5%;
+    margin-top: 0!important;
   }
 }
 
