--- a/content/themes/codinghouse/assets/css/codinghouse.css
+++ b/content/themes/codinghouse/assets/css/codinghouse.css
@@ -159,7 +159,7 @@ article h1 {
   color: #000;
   font-size: 36px;
   font-weight: bold;
-  margin-bottom: 40px; 
+  margin-bottom: 40px;
 }
 
 .post .exerpt {
@@ -505,4 +505,8 @@ a.banner-link:hover {
     margin: 1em auto;
     text-align: center;
   }
+}
+
+pre {
+  background: #e4e4e4!important;
 }
