--- a/content/themes/codinghouse/assets/css/codinghouse.css
+++ b/content/themes/codinghouse/assets/css/codinghouse.css
@@ -455,7 +455,7 @@ a.banner-link:hover {
   }
 }
 
-@media(min-width:767px) {
+@media(min-width:767px) and (min-height: 700px) {
   .navbar {
     padding: 0 0 30px 0;
     -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
