--- a/content/themes/codinghouse/assets/css/codinghouse.css
+++ b/content/themes/codinghouse/assets/css/codinghouse.css
@@ -2,6 +2,12 @@ body {
   background-color: #f8f8f8;
 }
 
+.post-content h1, .post-content h2,
+.post-content h3, .post-content h4 {
+  margin-top: 1.3em;
+  margin-bottom: 0.3em;
+}
+
 #nav-logo {
   margin: 0.5em 0 0 0.5em;
 }
