--- a/content/themes/codinghouse/partials/loop.hbs
+++ b/content/themes/codinghouse/partials/loop.hbs
@@ -10,7 +10,11 @@
         <h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
     </header>
     <section class="post-excerpt">
-        <img src={{image}} />
+        {{#if image}}
+            <a href="{{url}}">
+                <img src="{{image}}" alt="{{title}}" class="post-image">
+            </a>
+        {{/if}}
         <p>{{excerpt words="26"}} <a class="read-more" href="{{url}}">&raquo;</a></p>
     </section>
     <footer class="post-meta">
