--- a/content/themes/codinghouse/default.hbs
+++ b/content/themes/codinghouse/default.hbs
@@ -31,6 +31,7 @@
     <meta itemprop="thumbnailUrl" content="http://cdn.codinghouse.co/images/logo-black.png"/>
     <meta itemprop="image" content="http://cdn.codinghouse.co/images/logo-black.png"/>
 
+    <script src="//cdn.optimizely.com/js/2282550112.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -53,16 +54,16 @@
       })();
     </script>
     <script type="text/javascript" id="inspectletjs">
-      window.__insp = window.__insp || [];
-      __insp.push(['wid', 202097116]);
-      (function() {
-        function __ldinsp(){var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); }
-        if (window.attachEvent){
-          window.attachEvent('onload', __ldinsp);
-        } else{
-          window.addEventListener('load', __ldinsp, false);
-        }
-      })();
+        window.__insp = window.__insp || [];
+        __insp.push(['wid', 202097116]);
+        (function() {
+            function __ldinsp(){var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); }
+            if (window.attachEvent){
+                window.attachEvent('onload', __ldinsp);
+            }else{
+                window.addEventListener('load', __ldinsp, false);
+            }
+        })();
     </script>
 
     <script>
@@ -104,7 +105,7 @@
 <body class="{{body_class}}">
 
   <header id="ch-header" class="clearfix">
-    <a id="nav-logo" class="pull-left" href="http://codinghouse.co"><img src="http://cdn.codinghouse.co/images/logo.png" height="80"></a>
+    <a id="nav-logo" class="pull-left" href="http://codinghouse.co/blog"><img src="http://cdn.codinghouse.co/images/logo.png" height="80"></a>
     <div class="pull-right right-section">
       <ul class="list-inline hidden-xs">
         <li><a href="http://codinghouse.co/"><i class="fa fa-home"></i></a></li>
