fix link typo, remove home icon

--- a/content/themes/codinghouse/default.hbs
+++ b/content/themes/codinghouse/default.hbs
@@ -108,7 +108,6 @@
     <a id="nav-logo" class="pull-left" href="http://codinghouse.co/blog"><img src="http://cdn.codinghouse.co/images/logo.png" height="80"></a>
     <div class="pull-right right-section">
       <ul class="list-inline hidden-xs">
-        <li><a href="http://codinghouse.co/"><i class="fa fa-home"></i></a></li>
         <li><a href="https://twitter.com/codinghouse" target="_blank"><i class="fa fa-twitter"></i></a></li>
         <li><a href="https://www.facebook.com/codinghouse.co" target="_blank"><i class="fa fa-facebook"></i></a></li>
         <li><a href="https://www.linkedin.com/company/coding-house" target="_blank"><i class="fa fa-linkedin"></i></a></li>
@@ -116,7 +115,7 @@
         <li><a href="{{@blog.url}}/rss/"><i class="fa fa-rss"></i></a></li>
       </ul>
       <div id="learn-more">
-        <a href="http://codinghuse.co">LEARN ABOUT CODINGHOUSE</a>
+        <a href="http://codinghouse.co">LEARN ABOUT CODINGHOUSE</a>
       </div>
     </div>
   </header>
