--- a/content/themes/codinghouse/assets/css/codinghouse.css
+++ b/content/themes/codinghouse/assets/css/codinghouse.css
@@ -2,6 +2,11 @@ body {
   background-color: #f8f8f8;
 }
 
+a {
+  color: blue;
+  text-decoration: underline;
+}
+
 .post-content h1, .post-content h2,
 .post-content h3, .post-content h4 {
   margin-top: 1.3em;
