--- a/content/themes/codinghouse/assets/css/codinghouse.css
+++ b/content/themes/codinghouse/assets/css/codinghouse.css
@@ -1,7 +1,9 @@
 body {
   background-color: #f8f8f8;
 }
-
+p {
+  margin-bottom: 10px !important;
+}
 .post-content h1, .post-content h2,
 .post-content h3, .post-content h4 {
   margin-top: 1.3em;
