--- a/content/themes/codinghouse/assets/css/screen.css
+++ b/content/themes/codinghouse/assets/css/screen.css
@@ -176,6 +176,7 @@ h4, h5, h6 {
     margin: 0 0 0.4em 0;
     font-family: "Open Sans", sans-serif;
     text-rendering: geometricPrecision;
+    font-weight: bold;
 }
 
 h1 {
